@@ -42,10 +42,12 @@ table#typo3-tabmenu td a {
 }
 
 div.typo3-dyntabmenu-divs {
-	background: #ececec;
+	background-color: #ececec;
+	background-image: url('../../images/backgrounds/tab.png');
 	background-image: linear-gradient(center top, #ffffff 0px, #ececec 100px);
 	background-image: -moz-linear-gradient(center top, #ffffff 0px, #ececec 100px);
 	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(0px, #ffffff), color-stop(100px, #ececec));
+	background-repeat: repeat-x;
 	border: 1px solid #adadad;
 }
 
